--- a/Salon/ventasDS3/Configuracion/config.json
+++ b/Salon/ventasDS3/Configuracion/config.json
@@ -1,5 +1,5 @@
 {
-    "Server": "localhost",
+    "Host": "localhost",
     "DataBase": "MySQL",
     "Port": "3306",
     "NameDataBase": "VentasDS3",
